cctp_trader/cctp_trader.h

typedef void(__cdecl *FuncPtrTradeOnRspQrySecAgentTradingAccount)(CThostFtdcTradingAccountField* pTradingAccount, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQrySecAgentCheckMode)(CThostFtdcSecAgentCheckModeField* pSecAgentCheckMode, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQrySecAgentTradeInfo)(CThostFtdcSecAgentTradeInfoField* pSecAgentTradeInfo, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryOptionInstrTradeCost)(CThostFtdcOptionInstrTradeCostField* pOptionInstrTradeCost, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryOptionInstrCommRate)(CThostFtdcOptionInstrCommRateField* pOptionInstrCommRate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryExecOrder)(CThostFtdcExecOrderField* pExecOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryForQuote)(CThostFtdcForQuoteField* pForQuote, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryQuote)(CThostFtdcQuoteField* pQuote, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryOptionSelfClose)(CThostFtdcOptionSelfCloseField* pOptionSelfClose, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryInvestUnit)(CThostFtdcInvestUnitField* pInvestUnit, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryCombInstrumentGuard)(CThostFtdcCombInstrumentGuardField* pCombInstrumentGuard, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryCombAction)(CThostFtdcCombActionField* pCombAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryTransferSerial)(CThostFtdcTransferSerialField* pTransferSerial, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQryAccountregister)(CThostFtdcAccountregisterField* pAccountregister, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspError)(CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRtnOrder)(CThostFtdcOrderField* pOrder) ;
typedef void(__cdecl *FuncPtrTradeOnRtnTrade)(CThostFtdcTradeField* pTrade) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnOrderInsert)(CThostFtdcInputOrderField* pInputOrder, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnOrderAction)(CThostFtdcOrderActionField* pOrderAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnInstrumentStatus)(CThostFtdcInstrumentStatusField* pInstrumentStatus) ;
typedef void(__cdecl *FuncPtrTradeOnRtnBulletin)(CThostFtdcBulletinField* pBulletin) ;
typedef void(__cdecl *FuncPtrTradeOnRtnTradingNotice)(CThostFtdcTradingNoticeInfoField* pTradingNoticeInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnErrorConditionalOrder)(CThostFtdcErrorConditionalOrderField* pErrorConditionalOrder) ;
typedef void(__cdecl *FuncPtrTradeOnRtnExecOrder)(CThostFtdcExecOrderField* pExecOrder) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnExecOrderInsert)(CThostFtdcInputExecOrderField* pInputExecOrder, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnExecOrderAction)(CThostFtdcExecOrderActionField* pExecOrderAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnForQuoteInsert)(CThostFtdcInputForQuoteField* pInputForQuote, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnQuote)(CThostFtdcQuoteField* pQuote) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnQuoteInsert)(CThostFtdcInputQuoteField* pInputQuote, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnQuoteAction)(CThostFtdcQuoteActionField* pQuoteAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnForQuoteRsp)(CThostFtdcForQuoteRspField* pForQuoteRsp) ;
typedef void(__cdecl *FuncPtrTradeOnRtnCFMMCTradingAccountToken)(CThostFtdcCFMMCTradingAccountTokenField* pCFMMCTradingAccountToken) ;
typedef void(__cdecl *FuncPtrTradeOnErrRtnBatchOrderAction)(CThostFtdcBatchOrderActionField* pBatchOrderAction, CThostFtdcRspInfoField* pRspInfo) ;
typedef void(__cdecl *FuncPtrTradeOnRtnOptionSelfClose)(CThostFtdcOptionSelfCloseField* pOptionSelfClose) ;
    API_EXPORT void RegisterTradeFPOnRspQrySecAgentTradingAccount(void* trader, FuncPtrTradeOnRspQrySecAgentTradingAccount fp);
    API_EXPORT void RegisterTradeFPOnRspQrySecAgentCheckMode(void* trader, FuncPtrTradeOnRspQrySecAgentCheckMode fp);
    API_EXPORT void RegisterTradeFPOnRspQrySecAgentTradeInfo(void* trader, FuncPtrTradeOnRspQrySecAgentTradeInfo fp);
    API_EXPORT void RegisterTradeFPOnRspQryOptionInstrTradeCost(void* trader, FuncPtrTradeOnRspQryOptionInstrTradeCost fp);
    API_EXPORT void RegisterTradeFPOnRspQryOptionInstrCommRate(void* trader, FuncPtrTradeOnRspQryOptionInstrCommRate fp);
    API_EXPORT void RegisterTradeFPOnRspQryExecOrder(void* trader, FuncPtrTradeOnRspQryExecOrder fp);
    API_EXPORT void RegisterTradeFPOnRspQryForQuote(void* trader, FuncPtrTradeOnRspQryForQuote fp);
    API_EXPORT void RegisterTradeFPOnRspQryQuote(void* trader, FuncPtrTradeOnRspQryQuote fp);
    API_EXPORT void RegisterTradeFPOnRspQryOptionSelfClose(void* trader, FuncPtrTradeOnRspQryOptionSelfClose fp);
    API_EXPORT void RegisterTradeFPOnRspQryInvestUnit(void* trader, FuncPtrTradeOnRspQryInvestUnit fp);
    API_EXPORT void RegisterTradeFPOnRspQryCombInstrumentGuard(void* trader, FuncPtrTradeOnRspQryCombInstrumentGuard fp);
    API_EXPORT void RegisterTradeFPOnRspQryCombAction(void* trader, FuncPtrTradeOnRspQryCombAction fp);
    API_EXPORT void RegisterTradeFPOnRspQryTransferSerial(void* trader, FuncPtrTradeOnRspQryTransferSerial fp);
    API_EXPORT void RegisterTradeFPOnRspQryAccountregister(void* trader, FuncPtrTradeOnRspQryAccountregister fp);
    API_EXPORT void RegisterTradeFPOnRspError(void* trader, FuncPtrTradeOnRspError fp);
    API_EXPORT void RegisterTradeFPOnRtnOrder(void* trader, FuncPtrTradeOnRtnOrder fp);
    API_EXPORT void RegisterTradeFPOnRtnTrade(void* trader, FuncPtrTradeOnRtnTrade fp);
    API_EXPORT void RegisterTradeFPOnErrRtnOrderInsert(void* trader, FuncPtrTradeOnErrRtnOrderInsert fp);
    API_EXPORT void RegisterTradeFPOnErrRtnOrderAction(void* trader, FuncPtrTradeOnErrRtnOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRtnInstrumentStatus(void* trader, FuncPtrTradeOnRtnInstrumentStatus fp);
    API_EXPORT void RegisterTradeFPOnRtnBulletin(void* trader, FuncPtrTradeOnRtnBulletin fp);
    API_EXPORT void RegisterTradeFPOnRtnTradingNotice(void* trader, FuncPtrTradeOnRtnTradingNotice fp);
    API_EXPORT void RegisterTradeFPOnRtnErrorConditionalOrder(void* trader, FuncPtrTradeOnRtnErrorConditionalOrder fp);
    API_EXPORT void RegisterTradeFPOnRtnExecOrder(void* trader, FuncPtrTradeOnRtnExecOrder fp);
    API_EXPORT void RegisterTradeFPOnErrRtnExecOrderInsert(void* trader, FuncPtrTradeOnErrRtnExecOrderInsert fp);
    API_EXPORT void RegisterTradeFPOnErrRtnExecOrderAction(void* trader, FuncPtrTradeOnErrRtnExecOrderAction fp);
    API_EXPORT void RegisterTradeFPOnErrRtnForQuoteInsert(void* trader, FuncPtrTradeOnErrRtnForQuoteInsert fp);
    API_EXPORT void RegisterTradeFPOnRtnQuote(void* trader, FuncPtrTradeOnRtnQuote fp);
    API_EXPORT void RegisterTradeFPOnErrRtnQuoteInsert(void* trader, FuncPtrTradeOnErrRtnQuoteInsert fp);
    API_EXPORT void RegisterTradeFPOnErrRtnQuoteAction(void* trader, FuncPtrTradeOnErrRtnQuoteAction fp);
    API_EXPORT void RegisterTradeFPOnRtnForQuoteRsp(void* trader, FuncPtrTradeOnRtnForQuoteRsp fp);
    API_EXPORT void RegisterTradeFPOnRtnCFMMCTradingAccountToken(void* trader, FuncPtrTradeOnRtnCFMMCTradingAccountToken fp);
    API_EXPORT void RegisterTradeFPOnErrRtnBatchOrderAction(void* trader, FuncPtrTradeOnErrRtnBatchOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRtnOptionSelfClose(void* trader, FuncPtrTradeOnRtnOptionSelfClose fp);