CSharpCtp/TraderDllWrapper.cs

        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySecAgentTradingAccount",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySecAgentTradingAccountCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySecAgentTradingAccountDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySecAgentCheckMode",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySecAgentCheckModeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySecAgentCheckModeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQrySecAgentTradeInfo",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQrySecAgentTradeInfoCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQrySecAgentTradeInfoDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryOptionInstrTradeCost",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryOptionInstrTradeCostCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryOptionInstrTradeCostDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryOptionInstrCommRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryOptionInstrCommRateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryOptionInstrCommRateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryExecOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryExecOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryExecOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryForQuote",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryForQuoteCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryForQuoteDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryQuote",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryQuoteCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryQuoteDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryOptionSelfClose",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryOptionSelfCloseCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryOptionSelfCloseDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryInvestUnit",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryInvestUnitCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryInvestUnitDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryCombInstrumentGuard",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryCombInstrumentGuardCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryCombInstrumentGuardDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryCombAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryCombActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryCombActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryTransferSerial",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryTransferSerialCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryTransferSerialDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQryAccountregister",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQryAccountregisterCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQryAccountregisterDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspError",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspErrorCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspErrorDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnTrade",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnTradeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnTradeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnOrderInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnOrderInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnInstrumentStatus",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnInstrumentStatusCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnInstrumentStatusDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnBulletin",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnBulletinCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnBulletinDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnTradingNotice",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnTradingNoticeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnTradingNoticeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnErrorConditionalOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnErrorConditionalOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnErrorConditionalOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnExecOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnExecOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnExecOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnExecOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnExecOrderInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnExecOrderInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnExecOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnExecOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnExecOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnForQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnForQuoteInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnForQuoteInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnQuote",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnQuoteCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnQuoteDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnQuoteInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnQuoteInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnQuoteAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnQuoteActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnQuoteActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnForQuoteRsp",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnForQuoteRspCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnForQuoteRspDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnCFMMCTradingAccountToken",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnCFMMCTradingAccountTokenCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnCFMMCTradingAccountTokenDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnErrRtnBatchOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnErrRtnBatchOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnErrRtnBatchOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRtnOptionSelfClose",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRtnOptionSelfCloseCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRtnOptionSelfCloseDelegate callback);
